fixed some bug that appear in overflow of the column-values in a classview div
#classview .properties-block .row .column-values

a margen of 85px were added to keep all the column sorted.

--- a/branches/DRUPAL-6--2/sites/all/modules/neologism/neologism.css
+++ b/branches/DRUPAL-6--2/sites/all/modules/neologism/neologism.css
@@ -196,7 +196,8 @@ img#legend {
 }
 
 #classview .properties-block .row .column-values {
-
+  margin-left: 85px;
+  /*background-color: #0000ff;*/
 }
 
 #classview .description {
